fixing text-align in about section - added new class to target portfolio text better

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ p {
   line-height: 1.5;
 }
 
-.item > p {
+.portfolio > p {
   text-align: center;
 }
 
